# admith

./: .dockerignore  .env.example  .gitignore  AGENTS.md  DESIGN.md  HANDOFF-JA.md  PROMPT.md  README.md  docker-compose.yml  pytest.ini  review-result.md  tasks.md
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_remaining_tables.py  0003_production_schema_alignment.py
backend/src/admith/: config.py
backend/src/admith/adapters/: econtract_stub.py  llm.py  manifest_stub.py  repositories.py
backend/src/admith/adapters/db/: orm.py  repositories.py  session.py
backend/src/admith/api/: dependencies.py  main.py  runtime.py  schemas.py
backend/src/admith/domain/: agent.py  approval.py  compliance.py  contracts.py  matching.py  models.py  ontology.py  orchestrator.py  rule_engine.py  settlement.py  trust.py
backend/src/admith/ports/: __init__.py  interfaces.py
dashboard/: .dockerignore  Dockerfile  eslint.config.mjs  package.json  pnpm-lock.yaml  tailwind.config.ts
db/: init.sql
docs/: INSTALL.md  admith-overview.html  data-classification.md  db-schema-audit.md  decisions.md  issues.md  production-human-actions.md  production-readiness.md  quality-audit-plan.md  quality-audit-report-2026-05-23.md  repo-map.md  state.md  threat-model.md  vision.md
poc/: __init__.py  gemini_client.py  negotiation.py
scripts/: run_poc.py  seed_demo.py  smoke_test.sh  test_gemini_connection.py  verify.mjs
tests/: test_api.py  test_config.py  test_db_repositories.py  (+5 more)
(+152 files in other folders)
