[project]
name = "admith-backend"
version = "0.1.0"
description = "Admith B2B food waste matching MVP backend"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]",
  "sqlalchemy[asyncio]>=2.0",
  "alembic",
  "asyncpg",
  "pydantic>=2.0",
  "python-jose[cryptography]",
  "httpx",
  "google-generativeai",
  "geoalchemy2",
]

[dependency-groups]
dev = ["pytest", "pytest-asyncio", "ruff"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/admith"]

[tool.pytest.ini_options]
pythonpath = ["backend/src", "."]
asyncio_mode = "auto"

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501", "UP017"]
